--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
       <nav class="navigation">
 
         <a class="navigation-logo">
-          <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс."></a>
+          <img class="logo" src="images/LOGO_Black.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс."></a>
 
 
         <section class="navigation-form-search">
@@ -54,7 +54,7 @@
                     <ul class="cart-items-list">
                       <li class="cart-item">
                         <a href="#" class="popover-cart-link">
-                          <img class="cart-item__img" src="images/catalog (Avateur-selfie-stick).jpg"
+                          <img class="cart-item__img" src="images/catalog(Avateur-selfie-stick).jpg"
                             alt="Фото товара Любительская селфи-палка." width="39" height="43">
                           <p class="cart-item-title">Любительская селфи-палка</p>
                         </a>
@@ -75,7 +75,7 @@
                       </li>
                       <li class="cart-item">
                         <a href="#" class="popover-cart-link">
-                          <img class="cart-item__img" src="images/catalog (professional-selfie-stick).jpg"
+                          <img class="cart-item__img" src="images/catalog(professional-selfie-stick).jpg"
                             alt="Фото товара Профессиональная селфи-палка." width="39" height="43">
                           <p class="cart-item-title">Профессиональная селфи-палка</p>
                         </a>
@@ -201,7 +201,7 @@
 
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Цвет</legend>
-                <div class="catalog-filter-1">
+                <div class="catalog-filter-first">
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
@@ -245,20 +245,20 @@
               </div>
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Bluetooth</legend>
-                <div class="catalog-filter-2">
+                <div class="catalog-filter-second">
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
                         <input class="visually-hidden control-input" type="radio" name="product-group" value="yes"
                           checked>
-                        <span class="control-mark-2"></span>
+                        <span class="control-mark-second"></span>
                         <span class="control-label">Есть</span>
                       </label>
                     </li>
                     <li class="catalog-filter-item">
                       <label class="control">
                         <input class="visually-hidden control-input" type="radio" name="product-group" value="no">
-                        <span class="control-mark-2"></span>
+                        <span class="control-mark-second"></span>
                         <span class="control-label">Нет</span>
                       </label>
                     </li>
@@ -299,14 +299,14 @@
                     <li class="product-card">
                       <a class="product-card-link" href="product.html">
                         <div class="product-card-img">
-                          <img class="c" src="images/catalog (Avateur-selfie-stick).jpg" alt="Любительская селфи-палка."
+                          <img class="c" src="images/catalog(Avateur-selfie-stick).jpg" alt="Любительская селфи-палка."
                             width="360" height="380">
                           <div class="product-card-hidden">
                             <span class="button-discover"><span class="button-discover__text">Подробнее</span></span>
                           </div>
                         </div>
                         <div class="product-card-data">
-                          <span class="product-card-title">Любительская селфи-палка</span>
+                          <span class="product-card-title">Любительская<br> селфи-палка</span>
                           <span class="product-card-price">500 ₽</span>
                         </div>
                       </a>
@@ -314,7 +314,7 @@
                     <li class="product-card">
                       <a class="product-card-link" href="product.html">
                         <div class="product-card-img">
-                          <img class="product-card-image" src="images/catalog (professional-selfie-stick).jpg"
+                          <img class="product-card-image" src="images/catalog(professional-selfie-stick).jpg"
                             alt="Профессиональная селфи-палка." width="360" height="380">
                           <div class="product-card-hidden">
                             <span class="button-discover"><span class="button-discover__text">Подробнее</span></span>
@@ -330,7 +330,7 @@
                     <li class="product-card">
                       <a class="product-card-link" href="product.html">
                         <div class="product-card-img">
-                          <img class="product-card-image" src="images/catalog (unsinkable-selfie-stick).jpg"
+                          <img class="product-card-image" src="images/catalog(unsinkable-selfie-stick).jpg"
                             alt="Непотопляемая селфи-палка." width="360" height="380">
                           <div class="product-card-hidden">
                             <span class="button-discover"><span class="button-discover__text">Подробнее</span></span>
@@ -346,7 +346,7 @@
                     <li class="product-card">
                       <a class="product-card-link" href="product.html">
                         <div class="product-card-img">
-                          <img class="product-card-image" src="images/catalog (follow-me-selfie-stick).jpg"
+                          <img class="product-card-image" src="images/catalog(follow-me-selfie-stick).jpg"
                             alt="Селфи-палка «Следуй за мной»." width="360" height="380">
                           <div class="product-card-hidden">
                             <span class="button-discover"><span class="button-discover__text">Подробнее</span></span>
@@ -398,7 +398,7 @@
 
     <footer class="page-footer">
       <div class="wrapper">
-        <img class="logo" src="images/yellow logo.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
+        <img class="logo" src="images/LOGO_yellow.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
         <div class="page-footer-container">
           <section class="footer-adress">
             <h2 class="visually-hidden">Адрес.</h2>
