--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav class="navigation">
 
         <a class="navigation-logo">
-          <img class="logo" src="images/LOGO Black.svg" width="145" height="36"
+          <img class="logo" src="images/LOGO_Black.svg" width="145" height="36"
             alt="Логотип интернет-магазина Девайс."></a>
 
 
@@ -51,7 +51,7 @@
                     <ul class="cart-items-list">
                       <li class="cart-item">
                         <a href="#" class="popover-cart-link">
-                          <img class="cart-item__img" src="images/catalog (Avateur-selfie-stick).jpg"
+                          <img class="cart-item__img" src="images/catalog(Avateur-selfie-stick).jpg"
                             alt="Фото товара Любительская селфи-палка." width="39" height="43">
                           <p class="cart-item-title">Любительская селфи-палка</p>
                         </a>
@@ -72,7 +72,7 @@
                       </li>
                       <li class="cart-item">
                         <a href="#" class="popover-cart-link">
-                          <img class="cart-item__img" src="images/catalog (professional-selfie-stick).jpg"
+                          <img class="cart-item__img" src="images/catalog(professional-selfie-stick).jpg"
                             alt="Фото товара Профессиональная селфи-палка." width="39" height="43">
                           <p class="cart-item-title">Профессиональная селфи-палка</p>
                         </a>
@@ -162,7 +162,7 @@
               <ol class="slider-pagination-new">
                 <li class="slider-pagination-item">
                   <div class="slider-pagination-img">
-                    <img class="slider-image" src="images/slider-1 (quadrocopter).png" alt="Квадрокоптер." width="560"
+                    <img class="slider-image" src="images/slider-1(quadrocopter).png" alt="Квадрокоптер." width="560"
                       height="560">
                     <button class="slider-button-new slider-prev" type="button">
                       <span class="visually-hidden">Предыдущее фото.</span>
@@ -181,12 +181,12 @@
                         class="button-discover__text">Подробнее</span></a>
                     <table class="table">
                       <tr class="row">
-                        <td class="column-1">800 м</td>
-                        <td class="column-2">Дальность полета</td>
+                        <td class="column-first">800 м</td>
+                        <td class="column-second">Дальность полета</td>
                       </tr>
                       <tr class="row">
-                        <td class="column-1">50 м</td>
-                        <td class="column-2">Радиус поражения</td>
+                        <td class="column-first">50 м</td>
+                        <td class="column-second">Радиус поражения</td>
                       </tr>
                     </table>
                   </div>
@@ -196,7 +196,7 @@
 
                 <li class="slider-pagination-item visually-hidden">
                   <div class="slider-pagination-img">
-                    <img class="slider-image" src="images/slider-2 (fitness-braselet).png" alt="Фитнес-браслет."
+                    <img class="slider-image" src="images/slider-2(fitness-braselet).png" alt="Фитнес-браслет."
                       width="560" height="560">
                     <button class="slider-button-new slider-prev" type="button">
                       <span class="visually-hidden">Предыдущее фото.</span>
@@ -214,8 +214,8 @@
                     <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее</span></a>
                     <table class="table">
                       <tr class="row">
-                        <td class="column-1">48 часов</td>
-                        <td class="column-2">Без подзарядки</td>
+                        <td class="column-first">48 часов</td>
+                        <td class="column-second">Без подзарядки</td>
                       </tr>
                     </table>
                   </div>
@@ -225,7 +225,7 @@
 
                 <li class="slider-pagination-item visually-hidden">
                   <div class="slider-pagination-img">
-                    <img class="slider-image" src="images/slider-3 (selfie-stick).png" alt="Палка для селфи."
+                    <img class="slider-image" src="images/slider-3(selfie-stick).png" alt="Палка для селфи."
                       width="560" height="560">
                     <button class="slider-button-new slider-prev" type="button">
                       <span class="visually-hidden">Предыдущее фото.</span>
@@ -244,16 +244,16 @@
                     <a class="button button-discover" href="#"><span class="button-discover__text">Подробнее</span></a>
                     <table class="table">
                       <tr class="row">
-                        <td class="column-1">8,5 м</td>
-                        <td class="column-2">Длина палки</td>
+                        <td class="column-first">8,5 м</td>
+                        <td class="column-second">Длина палки</td>
                       </tr>
                       <tr class="row">
-                        <td class="column-1">5 кг</td>
-                        <td class="column-2">Вес палки</td>
+                        <td class="column-first">5 кг</td>
+                        <td class="column-second">Вес палки</td>
                       </tr>
                       <tr class="row">
-                        <td class="column-1">Карбон</td>
-                        <td class="column-2">Материал</td>
+                        <td class="column-first">Карбон</td>
+                        <td class="column-second">Материал</td>
                       </tr>
                     </table>
                   </div>
@@ -288,43 +288,43 @@
             <div class="all-our-products-block">
               <div class="all-products">
                 <a href="#" class="button-products">
-                  <div class="products"><img class="products-images" src="images/Vector (virtual-reality).svg"
-                      alt="Виртуальная реальность." width="96.95px" height="54.99px"></div>
+                  <div class="products"><img class="products-images" src="images/Vector(virtual-reality).svg"
+                      alt="Виртуальная реальность." width="97px" height="55px"></div>
                   <p class="products-text">Виртуальная реальность</p>
                 </a>
               </div>
               <div class="all-products">
                 <a class="button-products" href="monopods-for-selfies.device">
-                  <div class="products"><img class="products-images" src="images/Vector (mopods-for-selfies).svg"
-                      alt="Моноподы для селфи." width="85.87px" height="117px"></div>
+                  <div class="products"><img class="products-images products__monopods" src="images/Vector(mopods-for-selfies).svg"
+                      alt="Моноподы для селфи." width="86px" height="117px"></div>
                   <p class="products-text">Моноподы<br> для селфи</p>
                 </a>
               </div>
               <div class="all-products">
                 <a class="button-products" href="#">
-                  <div class="products"><img class="products-images" src="images/Vector (action-cameras).svg"
-                      alt="Экшн-камеры." width="71.02px" height="87px"></div>
+                  <div class="products"><img class="products-images" src="images/Vector(action-cameras).svg"
+                      alt="Экшн-камеры." width="71px" height="87px"></div>
                   <p class="products-text">Экшн-камеры</p>
                 </a>
               </div>
               <div class="all-products">
                 <a class="button-products" href="#">
-                  <div class="products"><img class="products-images" src="images/Vector (fitness-braselets).svg"
-                      alt="Фитнес-браслеты." width="107.31px" height="64.99px"></div>
+                  <div class="products"><img class="products-images" src="images/Vector(fitness-braselets).svg"
+                      alt="Фитнес-браслеты." width="108px" height="65px"></div>
                   <p class="products-text">Фитнес-браслеты</p>
                 </a>
               </div>
               <div class="all-products">
                 <a class="button-products" href="#">
-                  <div class="products"><img class="products-images" src="images/Vector (smart-watches).svg"
-                      alt="Умные часы." width="56.01px" height="97.98px"></div>
+                  <div class="products"><img class="products-images" src="images/Vector(smart-watches).svg"
+                      alt="Умные часы." width="56px" height="98px"></div>
                   <p class="products-text">Умные часы</p>
                 </a>
               </div>
               <div class="all-products">
                 <a class="button-products" href="#">
-                  <div class="products"><img class="products-images" src="images/Vector (quadrocopters).svg"
-                      alt="Квадрокоптеры." width="132.03px" height="69.01px"></div>
+                  <div class="products"><img class="products-images" src="images/Vector(quadrocopters).svg"
+                      alt="Квадрокоптеры." width="132px" height="69px"></div>
                   <p class="products-text">Квадрокоптеры</p>
                 </a>
               </div>
@@ -391,7 +391,7 @@
           <div class="wrapper">
             <h2 class="visually-hidden">Специальная доставка.</h2>
             <a class="special-delivery__button" href="special-delivery.html">
-              <div class="special-delivery__car"> <img class="delivery__car" src="images/icon (delivery-auto).svg"
+              <div class="special-delivery__car"> <img class="delivery__car" src="images/icon(delivery-auto).svg"
                   alt="грузовая доставка." width="47px" height="31px"> </div>
               <div class="special-delivery__text">Доставим редкий товар под заказ</div>
               <div class="special-delivery__inform">
@@ -467,7 +467,7 @@
 
     <footer class="page-footer">
       <div class="wrapper">
-        <img class="logo" src="images/LOGO yellow.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
+        <img class="logo" src="images/LOGO_yellow.svg" width="145" height="36" alt="Логотип интернет-магазина Девайс.">
         <div class="page-footer-container">
           <section class="footer-adress">
             <h2 class="visually-hidden">Адрес.</h2>
